correccion de botones en gral

--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@habitacion) do |f| %>
   <% if @habitacion.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@habitacion.errors.count, "error") %> prohibited this habitacion from being saved:</h2>
+      <h2><%= pluralize(@habitacion.errors.count, "error") %> Complete los datos antes de guardar:</h2>
 
       <ul>
       <% @habitacion.errors.full_messages.each do |message| %>
@@ -48,7 +48,9 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Guardar", class: "btn btn-success btn-xs"%>
+      <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+                  <span class="glyphicon glyphicon-floppy-disk"></span>
+                <% end %>
     </div>
   </div>
 <% end %>
