--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -6,5 +6,5 @@
 <%= render 'form' %>
 
 <div class="col-md-12">
-<%= link_to 'Back', habitaciones_path %>
+<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-default btn-sm' %>
 </div>
