--- a/EncarAlquiler/app/views/locatarios/new.html.erb
+++ b/EncarAlquiler/app/views/locatarios/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New locatario</h1>
+<h1>Nuevo locatario</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', locatarios_path, class: 'btn btn-default btn-xs' %>
+<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-primary btn-sm' %>
