--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -27,7 +27,7 @@
 
             <div class="form-group col-lg-2">
                 <label class="col-lg-12 col-xs-12">&nbsp;</label>
-                <%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus_sign), class: 'btn btn-primary btn-sm' %>
+                <%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus), class: 'btn btn-primary btn-sm' %>
                 <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                 <% end %>
