--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -19,7 +19,7 @@
 	    </table>
 	</div>
 	<div class="col-md-4">
-		<%= link_to '', edit_tipo_path(@tipo), class: "glyphicon glyphicon-list-alt" %>
-		<%= link_to '', tipos_path, class: "glyphicon glyphicon-chevron-left" %>
+		<%= link_to glyph(:pencil), edit_tipo_path(@tipo), class: 'btn btn-warning btn-sm' %>
+		<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-primary btn-sm' %>
 	</div>
 </div>
