--- a/EncarAlquiler/app/views/habitaciones/edit.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @habitacion %> |
-<%= link_to 'Back', habitaciones_path %>
+<%= link_to glyph(:remove), @habitacion, class: 'btn btn-default btn-sm' %>
+<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>
