--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -16,29 +16,23 @@
           <th class="text-center">Precio</th>
           <th class="text-center">Estado</th>
           <th class="text-center">Acciones</th>       
-          <th><%= link_to '+', new_habitacion_path, class: 'btn btn-default btn-xs'  %></th> 
+          <th><%= link_to glyph(:plus), new_habitacion_path, class: 'btn btn-primary btn-sm' %></th> 
 
         </tr>
       </thead>
 
       <tbody>
         <% @habitaciones.each do |habitacion| %>
-          <tr>
+          <tr class="text-center">
             <td><%= habitacion.numero %></td>
             <td><%= habitacion.tipo_id %></td>
             <td><%= habitacion.descripcion %></td>
             <td><%= habitacion.precio %></td>
             <td><%= habitacion.estado %></td>
             <td>
-              <button type="button" class="btn btn-default btn-xs">
-                <%= link_to 'Ver', habitacion %>
-              </button>
-              <button type="button" class="btn btn-default btn-xs"> 
-                <%= link_to 'Editar', edit_habitacion_path(habitacion) %> 
-              </button>
-              <button type="button" class="btn btn-default btn-xs">
-                <%= link_to 'Eliminar', habitacion, method: :delete, data: { confirm: 'Are you sure?' } %>
-              </button>
+                <%= link_to glyph(:eye_open), habitacion, class: 'btn btn-info btn-sm' %>
+                <%= link_to glyph(:pencil), edit_habitacion_path(habitacion), class: 'btn btn-warning btn-sm' %> 
+                <%= link_to glyph(:trash), habitacion, method: :delete, data: { confirm: 'Estas Seguro?' }, class: 'btn btn-danger btn-sm' %>
             </td>
           </tr>
         <% end %>
