--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -1,29 +1,38 @@
+
+<h1 class="espacio">Habitaciones</h1>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Tipo:</strong>
-  <%= @habitacion.tipo_id %>
-</p>
+<div class="col-md-10 col-md-offset-1">
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr class="success">
+          <th class="text-center">Numero</th>
+          <th class="text-center">Tipo</th>
+          <th class="text-center">Descripcion</th>
+          <th class="text-center">Estado</th>
+          <th class="text-center">Precio</th>         
+        </tr>
+      </thead>
 
-<p>
-  <strong>Numero:</strong>
-  <%= @habitacion.numero %>
-</p>
+      <tbody>
+        <tr>
+          <td><%= @habitacion.numero %></td>
+          <td><%= @habitacion.tipo_id %></td>
+          <td><%= @habitacion.descripcion %></td>
+          <td><%= @habitacion.estado %></td>
+          <td><%= @habitacion.precio %></td>
+        </tr>
+      </tbody>
+    </table>    
+  </div>
+</div>
 
-<p>
-  <strong>Descripcion:</strong>
-  <%= @habitacion.descripcion %>
-</p>
+<div class="col-md-4">
+  <div class="actions">
+   <%= link_to glyph(:pencil), edit_habitacion_path(@habitacion), class: 'btn btn-warning btn-sm' %>
+<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>
+  </div>
+</div>
 
-<p>
-  <strong>Estado:</strong>
-  <%= @habitacion.estado %>
-</p>
 
-<p>
-  <strong>Precio:</strong>
-  <%= @habitacion.precio %>
-</p>
-
-<%= link_to 'Edit', edit_habitacion_path(@habitacion) %> |
-<%= link_to 'Back', habitaciones_path %>
