--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -1,4 +1,3 @@
-<h1 class="espacio">Editar Locatarios</h1>
 <%= form_for(@locatario) do |f| %>
   <% if @locatario.errors.any? %>
     <div id="error_explanation">
@@ -49,6 +48,8 @@
 
 
   <div class="actions">
-    <%= f.submit "Guardar", class: "btn btn-success btn-xs" %>
-  </div>
+      <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+                  <span class="glyphicon glyphicon-floppy-disk"></span>
+                <% end %>
+    </div>
 <% end %>
