--- a/EncarAlquiler/app/views/locatarios/edit.html.erb
+++ b/EncarAlquiler/app/views/locatarios/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="col-md-4">
 	<div class="actions">
-		<%= link_to '', @locatario, class: "glyphicon glyphicon-list-alt" %>
-		<%= link_to '', locatarios_path, class: "glyphicon glyphicon-chevron-left" %>
+		<%= link_to glyph(:remove), @locatario, class: 'btn btn-default btn-sm' %>
+		<%= link_to glyph(:arrow_left), locatarios_path,  class: 'btn btn-primary btn-sm' %>
 	</div>
 </div>
