--- a/EncarAlquiler/app/views/tipos/new.html.erb
+++ b/EncarAlquiler/app/views/tipos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New tipo</h1>
+<h1>Nuevo tipo de habitación</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tipos_path %>
+<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-primary btn-sm' %>
