--- a/EncarAlquiler/app/views/layouts/index_2.html.erb
+++ b/EncarAlquiler/app/views/layouts/index_2.html.erb
@@ -29,7 +29,7 @@
 
          </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">SALIR</a></li>
+            <li><a href="#">Salir</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
