--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -1,14 +1,15 @@
 <div class="espacio">
-  <h1>Tipos</h1>
+  <h1><center>Tipos</center></h1>
     <div class="col-md-6 col-md-offset-3">
       <div class="table-responsive">
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-striped">
           <thead>
             <tr class="success">
               <th class="text-center">Nombre</th>
               <th class="text-center">Acciones</th>       
               <th>
                     <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
+
               </th>
             </tr>
           </thead>
