--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -38,7 +38,7 @@
                 <a href="a" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Administración <span class="caret"></span></a>
                <ul class="dropdown-menu">
                 
-                  <li><%= link_to 'Reservas', reservas_path %></li>
+                  <li><%= link_to 'Reserva', reservas_path%></li>
                   <li><%= link_to 'Locatarios', locatarios_path %></li>
                   <li><%= link_to 'Habitaciones', habitaciones_path %></li>
                   <li><%= link_to 'Tipos', tipos_path %></li>
