--- a/EncarAlquiler/app/views/locatarios/show.html.erb
+++ b/EncarAlquiler/app/views/locatarios/show.html.erb
@@ -13,7 +13,7 @@
               </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="text-center">
                   <td><%= @locatario.nombre %></td>
                   <td><%= @locatario.apellido %></td>
                   <td><%= @locatario.ci %></td>
