--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,9 +1,6 @@
-
 <div class="col-md-12">
-	<h1>Nueva Habitacion</h1>
+	<h1 class="text-center text-uppercase">
+		Nueva Habitacion
+	</h1>
 </div>
 <%= render 'form' %>
-
-<div class="col-md-12">
-<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-default btn-sm' %>
-</div>
