--- a/EncarAlquiler/app/views/locatarios/edit.html.erb
+++ b/EncarAlquiler/app/views/locatarios/edit.html.erb
@@ -1,7 +1,4 @@
+<h1 class="text-center text-uppercase">Editar Locatario</h1>
 <%= render 'form' %>
-<div class="col-md-4">
-	<div class="actions">
-		<%= link_to glyph(:remove), @locatario, class: 'btn btn-default btn-sm' %>
-		<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-primary btn-sm' %>
-	</div>
-</div>
+<!--<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-primary btn-sm' %>-->
+
