--- a/EncarAlquiler/app/views/locatarios/show.html.erb
+++ b/EncarAlquiler/app/views/locatarios/show.html.erb
@@ -1,15 +1,16 @@
-<h1 class="espacio">Locatarios</h1>
+<h1 class="text-center text-uppercase container">Locatarios</h1>
 <p id="notice"><%= notice %></p>
 <div class="col-md-10 col-md-offset-1">
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
             <thead>
-              <tr class="success">
+              <tr class="info">
                 <th class="text-center">Nombre</th>
                 <th class="text-center">Apellido</th>
                 <th class="text-center">CI:</th>
                 <th class="text-center">Telefono</th>
                 <th class="text-center">Email</th>
+                <th class="text-center">Acciones</th>
               </tr>
             </thead>
             <tbody>
@@ -19,14 +20,12 @@
                   <td><%= @locatario.ci %></td>
                   <td><%= @locatario.telefono %></td>
                   <td><%= @locatario.email %></td>
+                  <td>
+                    <%= link_to glyph(:pencil), edit_locatario_path(@locatario), class: 'btn btn-warning btn-sm' %>
+                    <%= link_to glyph(:arrow_left), locatarios_path,  class: 'btn btn-info btn-sm' %>
+                  </td>
                 </tr>
             </tbody>
     </table>
-  </div>
-</div>
-<div class="col-md-4">
-  <div class="actions">
-      <%= link_to glyph(:pencil), edit_locatario_path(@locatario), class: 'btn btn-warning btn-sm' %>
-      <%= link_to glyph(:arrow_left), locatarios_path,  class: 'btn btn-primary btn-sm' %>
   </div>
 </div>
