--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -1,37 +1,33 @@
-
-<h1 class="espacio">Habitaciones</h1>
+<h1 class="container text-center text-uppercase">Habitacion</h1>
 <p id="notice"><%= notice %></p>
 
 <div class="col-md-10 col-md-offset-1">
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
-        <tr class="success">
+        <tr class="info">
           <th class="text-center">Numero</th>
           <th class="text-center">Tipo</th>
           <th class="text-center">Descripcion</th>
           <th class="text-center">Estado</th>
-          <th class="text-center">Precio</th>         
+          <th class="text-center">Precio</th>  
+          <th class="text-center">Acciones</th>       
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class="text-center">
           <td><%= @habitacion.numero %></td>
           <td><%= @habitacion.tipo_id %></td>
           <td><%= @habitacion.descripcion %></td>
           <td><%= @habitacion.estado %></td>
           <td><%= @habitacion.precio %></td>
+          <td>
+            <%= link_to glyph(:pencil), edit_habitacion_path(@habitacion), class: 'btn btn-warning btn-sm' %>
+            <%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-info btn-sm' %>
+          </td>
         </tr>
       </tbody>
     </table>    
   </div>
 </div>
-
-<div class="col-md-4">
-  <div class="actions">
-   <%= link_to glyph(:pencil), edit_habitacion_path(@habitacion), class: 'btn btn-warning btn-sm' %>
-<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>
-  </div>
-</div>
-
 
