--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -14,23 +14,34 @@
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
         <thead>
-          <tr class="success">
-            <th class="text-center"><%= f.label :nombre %><br></th>
+          <tr class="info">
+            <th class="text-center">
+              <%= f.label :nombre %><br>
+            </th>
+            <!--ACCIONES-->
+            <th class="text-center">
+              Acciones
+            </th>
           </tr>
         </thead>
         
         <tbody>
-          <tr>
-            <td><%= f.text_field :nombre %></td>
+          <tr class="text-center">
+            <td>
+              <%= f.text_field :nombre %>
+            </td>
+            <td>
+              <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+              <span class="glyphicon glyphicon-floppy-disk"></span>
+              <% end %>
+              <%= link_to glyph(:remove), @tipo,  class: 'btn btn-danger btn-sm' %>
+              <%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %>
+
+              
+            </td>
           </tr>
         </tbody>
       </table>
-    </div>
-  
-    <div class="actions">
-      <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
-                  <span class="glyphicon glyphicon-floppy-disk"></span>
-                <% end %>
     </div>
   </div>
 <% end %>
