--- a/EncarAlquiler/app/views/tipos/edit.html.erb
+++ b/EncarAlquiler/app/views/tipos/edit.html.erb
@@ -1,7 +1,7 @@
+<h1 class="text-center text-uppercase container">Editar tipo de habitacion</h1>
 <%= render 'form' %>
 <div class="col-md-6 col-md-offset-3">
 	<div class="actions">
-		<%= link_to glyph(:remove), @tipo,  class: 'btn btn-default btn-sm' %> 
-		<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-primary btn-sm' %>
+		
 	</div>
 </div>
