--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -1,16 +1,18 @@
-<div class="espacio">
-  <h1><center>Tipos</center></h1>
+<div class="container">
+  <h1 class="text-center text-uppercase">
+    Tipos
+    <th>
+      <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
+    </th>
+  </h1>
     <div class="col-md-6 col-md-offset-3">
       <div class="table-responsive">
         <table class="table table-bordered table-striped">
           <thead>
-            <tr class="success">
+            <tr class="info">
               <th class="text-center">Nombre</th>
               <th class="text-center">Acciones</th>       
-              <th>
-                    <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
-
-              </th>
+              
             </tr>
           </thead>
 
