--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -1,24 +1,31 @@
-<h1 class="espacio">Tipos</h1>
-
-<!--<p id="notice"><%= notice %></p>-->
+<h1 class="text-center text-uppercase container">Tipos</h1>
 <div class="col-md-6 col-md-offset-3">
 	<div class="table-responsive">
 	    <table class="table table-bordered table-hover">
 	      <thead>
-	        <tr class="success">
-	          <th class="text-center">Nombre</th>
+	        <tr class="info">
+	          <th class="text-center">
+	          	Nombre
+	          </th>
+	          <th class="text-center">
+	          	Acciones
+	          </th>
+
 	        </tr>
 	      </thead>
 
 	      <tbody>
-	          <tr>
-	            <td><%= @tipo.nombre %></td>
+	          <tr class="text-center">
+	            <td>
+	            	<%= @tipo.nombre %>
+	            </td>
+
+	            <td>
+	            	<%= link_to glyph(:pencil), edit_tipo_path(@tipo), class: 'btn btn-warning btn-sm' %>
+					<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %>
+	            </td>
 	          </tr>
 	      </tbody>
 	    </table>
-	</div>
-	<div class="col-md-4">
-		<%= link_to glyph(:pencil), edit_tipo_path(@tipo), class: 'btn btn-warning btn-sm' %>
-		<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-primary btn-sm' %>
 	</div>
 </div>
