--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-	<h1 class="text-center text-uppercase">
+	<h1 class="text-center text-uppercase espacio">
 		Nueva Habitacion
 	</h1>
 </div>
