--- a/EncarAlquiler/app/views/locatarios/index.html.erb
+++ b/EncarAlquiler/app/views/locatarios/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container espacio">
   <h1 class="text-center text-uppercase">
     Locatarios
     <th>
@@ -7,7 +7,7 @@
   </h1>
   
     <div class="table">
-      <table class="table table-striped">
+      <table class="table table-bordered table-hover">
         <thead>
           <tr class="info">
             <th class="text-center">Nombre</th>
