--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center text-uppercase">
+  <h1 class="text-center text-uppercase espacio">
     Tipos
     <th>
       <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
@@ -7,7 +7,7 @@
   </h1>
     <div class="col-md-6 col-md-offset-3">
       <div class="table-responsive">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-hover">
           <thead>
             <tr class="info">
               <th class="text-center">Nombre</th>
