--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -1,4 +1,9 @@
-<h1 class="text-center text-uppercase container">Tipos</h1>
+<h1 class="text-center text-uppercase container espacio">
+	Tipos
+	<th>
+      <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
+    </th>
+</h1>
 <div class="col-md-6 col-md-offset-3">
 	<div class="table-responsive">
 	    <table class="table table-bordered table-hover">
