correciones de vistas

--- a/EncarAlquiler/app/views/reservas/index.html.erb
+++ b/EncarAlquiler/app/views/reservas/index.html.erb
@@ -1,13 +1,10 @@
 <div class="col-md-10 col-md-offset-1">
   <p id="notice"><%= notice %></p>
-    <h1 class="text-center text-uppercase">
+    <h1 class="text-center text-uppercase espacio">
       Reservas realizadas
-      <th>
         <%= link_to glyph(:plus), new_reserva_path, class: 'btn btn-primary btn-sm' %>
-      </th>
     </h1>
 </div>
-  
 <div class="col-md-10 col-md-offset-1">
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
