--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase container">Reserva</h1>
+<h1 class="text-center text-uppercase container espacio">Reserva</h1>
 <p id="notice"><%= notice %></p>
 <div class="col-md-10 col-md-offset-1">
   <div class="table-responsive">
