--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@reserva) do |f| %>
-<div class="container well">
+<div class="container ">
     <div class="row">
         <div class="col-lg-12">
             <% if @reserva.errors.any? %>
@@ -14,7 +14,7 @@
             <% end %>
         </div>
     </div>
-    <div class="row">
+    <div class="row well">
         <div class="col-lg-12">
             <div class="form-group col-lg-5">
                 <%= f.label :locatario_id %><br>
@@ -31,6 +31,11 @@
                 <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                 <% end %>
+
+                  <%= link_to glyph(:remove), @reserva, class: 'btn btn-danger btn-sm' %>
+
+                  <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %>
+              </td>
             </div>
         </div>
     </div>
