--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container espacio">
     <div class="row">
         <div class="col-lg-12">
-<h1>Nueva Reserva</h1>
+<h1 class="text-center">Nueva Reserva</h1>
 </div>
 <%= render 'form' %>
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-<%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-primary btn-sm' %>
+<!--<%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-primary btn-sm' %>-->
 </div>
