--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -40,11 +40,11 @@
 
       <tbody>
           <tr class="text-center">
-            <td><%= f.text_field :nombre %></td>
-            <td><%= f.text_field :apellido %></td>
-            <td><%= f.text_field :ci %></td>
-            <td><%= f.text_field :telefono %></td>
-            <td><%= f.text_field :email %></td>
+            <td><%= f.text_field :nombre, class:"form-control input-sm" %></td>
+            <td><%= f.text_field :apellido, class:"form-control input-sm" %></td>
+            <td><%= f.text_field :ci, class:"form-control input-sm"%></td>
+            <td><%= f.text_field :telefono, class:"form-control input-sm" %></td>
+            <td><%= f.text_field :email, class:"form-control input-sm" %></td>
 
             <!--BOTONES EN ACCIONES en new habitaciones-->
             <td>
