--- a/EncarAlquiler/app/views/principal/index.html.erb
+++ b/EncarAlquiler/app/views/principal/index.html.erb
@@ -72,7 +72,7 @@
 	<div class="navbar navbar-default navbar-fixed-bottom">
 
 		<div class="container">
-		<a class="navbar-btn btn-primary btn pull-left">Contacto</a>
+		<!--<a class="navbar-btn btn-primary btn pull-left">Contacto</a>-->
 		</div>
 		
 	</div>
