--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -28,7 +28,7 @@
         <tbody>
           <tr class="text-center">
             <td>
-              <%= f.text_field :nombre %>
+              <%= f.text_field :nombre, class:"form-control input-sm" %>
             </td>
             <td>
               <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
