--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -28,30 +28,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><%= link_to 'Encarnacion Alquiler', 'principal#index', :class= => 'navbar-brand'%></h3>
+          <%= link_to ' EncarAlquiler ', 'principal#index', class:'btn btn-lg glyphicon glyphicon-home'%>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if usuario_signed_in? %>
             <ul class="nav navbar-nav">
-              <li class="dropdown">
+              <div class="">
+                <%= link_to ' Reservas', reservas_path, class:'btn btn-lg glyphicon glyphicon-calendar'%>
+                <%= link_to ' Locatarios', locatarios_path, class:'btn btn-lg glyphicon glyphicon-user'%>
+                <%= link_to ' Habitaciones', habitaciones_path, class:'btn btn-lg glyphicon glyphicon-tower'%>
+                <%= link_to ' Tipos', tipos_path, class:'btn btn-lg glyphicon glyphicon-bookmark'%>
+              </div>
+              <!--<li class="dropdown">
                 <a href="a" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Administración <span class="caret"></span></a>
-               <ul class="dropdown-menu">
-                
+                <ul class="dropdown-menu">
                   <li><%= link_to 'Reserva', reservas_path%></li>
                   <li><%= link_to 'Locatarios', locatarios_path %></li>
                   <li><%= link_to 'Habitaciones', habitaciones_path %></li>
                   <li><%= link_to 'Tipos', tipos_path %></li>
-                 
-              </ul>
-
-            </li>
-            <% end %>
-
-         </ul>
+                </ul>-->
+            </ul>
+          <% end %>
           <ul class="nav navbar-nav navbar-right">
             <% if usuario_signed_in? %>
             <li>
-            <%= link_to glyph(:log_out), destroy_usuario_session_path, class: 'btn-lg',  method: :delete%>
+            <%= link_to ' Salir', destroy_usuario_session_path, class:'btn-lg glyphicon glyphicon-log-out',  method: :delete%>
             </li>
             <% end %>
           </ul>
