--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -9,8 +9,9 @@
       </ul>
     </div>
   <% end %>
-<div class="col-md-12">
-<div class="table-responsive">
+  <div class="container">
+  <div class="col-md-12">
+  <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
         <tr class="info">
@@ -60,5 +61,6 @@
       </tbody>
     </table>
   </div>
-</div>  
+  </div>  
+  </div>  
 <% end %>
