--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -9,9 +9,8 @@
       </ul>
     </div>
   <% end %>
-
-
-    <div class="col-md-12">
+  <div class="container">
+  <div class="col-md-12">
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
         <thead>
@@ -60,5 +59,6 @@
         </tbody>
       </table>
     </div>
+  </div>
   </div>
 <% end %>
