--- a/EncarAlquiler/app/views/usuarios/confirmations/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/confirmations/new.html.erb
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container espacio">
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="page-header">
