--- a/EncarAlquiler/app/views/usuarios/passwords/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/passwords/new.html.erb
@@ -1,11 +1,14 @@
-<div class="container">
+<div class="container espacio">
 	<div class="row">
-		<div class="col-lg-offset-3 col-lg-6">
+		<div class="col-lg-8" class="img-responsive">
+            <img src="../../img/adm.jpg" style="padding-top: 100px;" width="500" height="400" >
+       </div>
+		<div class="col-lg-3">
 			<div class="page-header">
 				<h1 id="type">Olvidaste tu contraseña?</h1>
 			</div>
 		</div>
-		<div class="col-lg-offset-3 col-lg-6">
+		<div class="col-lg-3">
 			<%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 				<%= devise_error_messages! %>
 				<div class="field text-uppercase">
@@ -16,16 +19,10 @@
 					<%= button_tag(type: 'submit', class: "btn btn-primary btn-block") do %>
 						<span class="glyphicon glyphicon-user"></span> Enviar instructiones
 					<% end %>
+				</br>
 				</div>
 			<% end %>
+			<%= render "usuarios/shared/links" %>
 		</div>
 	</div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-lg-offset-3 col-lg-6">
-      <%= render "usuarios/shared/links" %>
-    </div>
-</div>
 </div>
