--- a/EncarAlquiler/app/views/usuarios/registrations/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/registrations/new.html.erb
@@ -1,11 +1,12 @@
-<div class="container">
+<div class="container espacio">
   <div class="row">
-    <div class="col-lg-offset-4 col-lg-4">
-      <div class="page-header">
-        <h1 id="type">Registrar usuario</h1>
-      </div>
+    <div class="col-lg-8" class="img-responsive">
+            <img src="../img/adm.jpg" style="padding-top: 100px;" width="500" height="400" >
     </div>
-    <div class="col-lg-offset-4 col-lg-4">
+    <div class="col-lg-3">
+      <div class="page-header">
+        <h1 id="type">Registrarse</h1>
+      </div>
       <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <div class="field text-muted">
@@ -24,9 +25,11 @@
         <%= button_tag(type: 'submit', class: "btn btn-primary btn-block") do %>
           <span class="glyphicon glyphicon-user"></span> Registrarse
         <% end %>
+      </br>
       </div>
       <% end %>
+      <%= render "usuarios/shared/links" %>
     </div>
   </div>
 </div>
-<%= render "usuarios/shared/links" %>
+
