--- a/EncarAlquiler/app/views/usuarios/shared/_links.html.erb
+++ b/EncarAlquiler/app/views/usuarios/shared/_links.html.erb
@@ -1,9 +1,6 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-offset-4 col-lg-4">
             <div class="form-group">
                 <%- if controller_name != 'sessions' %>
-                    <%= link_to "Ingresar" , new_session_path(resource_name), class: 'btn btn-link btn-block' %>
+                    <%= link_to glyph(:log_in)+" Ingresar", new_session_path(resource_name), class: 'btn btn-success btn-block' %>
                 <% end -%>
             </div>
             <div class="form-group">
@@ -33,6 +30,3 @@
                 <% end -%>
                 <% end -%>
             </div>
-        </div>
-    </div>
-</div>
